<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ptydroid.panataxi.LocationActivityFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/accent_color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:text="@string/title_datehour"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_access_time_black_36dp"
        android:id="@+id/location_title" />

    <CheckBox
        android:id="@+id/curentDate_chck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/currDate_txt"
        android:layout_below="@+id/date_label" />

    <CheckBox
        android:id="@+id/curentTime_chck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/currTime_txt"
        android:layout_below="@+id/time_label" />


</LinearLayout>
