<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ptydroid.panataxi.LocationActivityFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/primary_color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:text="@string/title_location"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_map_black_36dp"
        android:id="@+id/location_title" />



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/origin_text_widget">
        <AutoCompleteTextView
            android:id="@+id/origin_etxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="@string/originloc_label"
            android:theme="@style/PanaTaxiTheme"
            style="@style/PanaTaxiTheme" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/destiny_text_widget">
        <AutoCompleteTextView
            android:id="@+id/destiny_etxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destinyloc_label"
            android:layout_below="@+id/destiny_label"
            android:autoText="true"
            style="@style/PanaTaxiTheme"
            android:theme="@style/PanaTaxiTheme" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
